--- a/one/ilimitada/resources/templates/partials/secondline.hbs
+++ b/one/ilimitada/resources/templates/partials/secondline.hbs
@@ -31,7 +31,7 @@
         <use class="icon-v3" xlink:href="#icon-minutes-sms-mid"></use>
       </svg>
       <p class="ws10-c-product-detail__text"><strong>200 minutos</strong>
-        en llamadas a fijos y móviles
+        en llamadas a fijos y móviles.
       </p>
     </div>
     <div
