cambio de bodegon de plp
Signed-off-by: allwars <Klaus008.LL>

--- a/one/ilimitada/resources/templates/partials/header-ticket.hbs
+++ b/one/ilimitada/resources/templates/partials/header-ticket.hbs
@@ -172,7 +172,7 @@
                           <p
                             class="ws10-c-card-rate__dto ws10-c-card-rate__dto--percent"
                           >
-                            {{ price.[0].promocion }}
+                            {{ header-ticket.title-1 }}
                           </p>
                           <p
                             class="ws10-c-card-rate__dto ws10-c-card-rate__dto--label"
@@ -218,7 +218,7 @@
                                         <p
                             class="ws10-c-card-rate__dto ws10-c-card-rate__dto--percent"
                           >
-                            {{ price.[0].promocion }}
+                            {{ header-ticket.title-1 }}
                           </p>
                           <p
                             class="ws10-c-card-rate__dto ws10-c-card-rate__dto--label"
