--- a/one/ilimitada/resources/templates/partials/sinsorpresas.hbs
+++ b/one/ilimitada/resources/templates/partials/sinsorpresas.hbs
@@ -15,8 +15,7 @@
       >64,99€/mes</span></strong></p>
   <p class="ws10-flex ws10-flex__direction--column">
     <span>Otras promociones:</span>
-    <span data-js-vf="_recommendedRate">Llévate el paquete de Móvil+Fibra al
-      50%dto. 3 meses</span>
+    <span data-js-vf="_recommendedRate">Llévate el paquete de Móvil+Fibra al {{ header-ticket.title-1 }}</span>
     <span class="ws10-u--hidden" data-js-vf="_regularRate">Llévate la fibra
       superior por precio inferior durante 3 meses y al 50% dto. 3 meses.</span>
     <span data-js-vf="_portability">Línea adicional: GRATIS durante 1 año,
