--- a/one/maxi/resources/templates/partials/popups.hbs
+++ b/one/maxi/resources/templates/partials/popups.hbs
@@ -16,111 +16,215 @@
                 Pack Seriefans</p>
             <ul class="ws10-flex ws10-flex__wrap">
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/hbo.png" alt="logo HBO">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/hbo.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/hbo.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/hbo.png" alt="logo HBO">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">HBO España</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/foxnow.png" alt="logo canal Foxnow">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/hbo.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/hbo.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/hbo.png" alt="logo HBO">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">FOXNOW</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/axnnow.png" alt="logo canal Axn Now">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/hbo.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/hbo.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/hbo.png" alt="logo HBO">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">AXN Now</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/tnt.png" alt="logo canal TNT">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/hbo.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/hbo.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/hbo.png" alt="logo HBO">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">TNT</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/fox.png" alt="logo canal Fox">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/fox.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/fox.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/fox.png" alt="logo canal Fox">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">FOX</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/amcseries-desktop.png" alt="logo canal Syfy">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/amcseries-desktop.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/amcseries-desktop.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/amcseries-desktop.png" alt="logo AMC SELEKT series">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">AMC SELEKT Series</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/syfy.png" alt="logo canal Syfy">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/syfy.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/syfy.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/syfy.png" alt="logo canal Syfy">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">SYFY</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/calle13.png" alt="logo canal Calle 13">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/calle13.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/calle13.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/calle13.png" alt="logo canal Calle 13">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">Calle 13</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/axn.png" alt="logo canal AXN">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/axn.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/axn.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/axn.png" alt="logo canal AXN">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">AXN</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/axnwhite.png" alt="logo canal AXN White">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/axnwhite.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/axnwhite.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/axnwhite.png" alt="logo canal AXN White">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">AXN White</p>
                 </li>
             </ul>
             <p class="ws10-u-heading--5 ws10-align--center">Y además todos los Packs incluyen estos canales:</p>
             <ul class="ws10-flex ws10-flex__wrap">
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/seriefans/amc_desktop.png" alt="logo AMC">
+                    <picture>
+                        <source srcset="img/section-tv/popup/seriefans/amc_desktop.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/seriefans/amc_desktop.png" type="image/png">
+                        <img src="img/section-tv/popup/seriefans/amc_desktop.png" alt="logo AMC">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">AMC</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/foxlife.png" alt="logo FOX LIFE">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/foxlife.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/foxlife.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/foxlife.png" alt="logo FOX LIFE">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">FOX Life</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/cosmo.png" alt="logo canal COSMO">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/cosmo.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/cosmo.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/cosmo.png" alt="logo canal COSMO">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0 ws10-u-mb0">Cosmo</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/comedy.png" alt="logo canal Comedy Central">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/comedy.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/comedy.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/comedy.png" alt="logo canal Comedy Central">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">Comedy Central</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/xtrm.png" alt="logo canal XTRM">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/xtrm.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/xtrm.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/xtrm.png" alt="logo canal XTRM">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">XTRM</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/tcm.png" alt="logo canal TCM">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/tcm.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/tcm.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/tcm.png" alt="logo canal TCM">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">TCM</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/sundance.png" alt="logo canal Sundance TV">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/sundance.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/sundance.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/sundance.png" alt="logo canal Sundance TV">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">Sundance TV</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/natgeo.png" alt="logo canal National Geographic">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/natgeo.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/natgeo.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/natgeo.png" alt="logo canal National Geographic">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">National Geographic</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/natgeonow.png" alt="logo canal National Geographic Now">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/natgeonow.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/natgeonow.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/natgeonow.png" alt="logo canal National Geographic Now">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">National Geographic Now</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/cocina.png" alt="logo canal Cocina">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/cocina.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/cocina.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/cocina.png" alt="logo canal Cocina">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">Cocina</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/decasa.png" alt="logo canal Decasa">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/decasa.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/decasa.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/decasa.png" alt="logo canal Decasa">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">Decasa</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/mtv.png" alt="logo canal MTV">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/mtv.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/mtv.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/mtv.png" alt="logo canal MTV">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">MTV</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/mymtv.png" alt="logo canal MTV Music">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/mymtv.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/mymtv.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/mymtv.png" alt="logo canal MTV Music">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">MyMTV Music</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/solmusica.png" alt="logo canal SOL Música">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/solmusica.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/solmusica.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/solmusica.png" alt="logo canal SOL Música">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">SOL Música</p>
                 </li>
 
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/eurosport.png" alt="logo Eurosport 1">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/eurosport.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/eurosport.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/eurosport.png" alt="logo Eurosport 1">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">Eurosport 1</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/6@tablet ws10-align--center">
-                    <img src="img/section-tv/popup/comunes/selekt.png" alt="logo selekt">
+                    <picture>
+                        <source srcset="img/section-tv/popup/comunes/selekt.webp" type="image/webp">
+                        <source srcset="img/section-tv/popup/comunes/selekt.png" type="image/png">
+                        <img src="img/section-tv/popup/comunes/selekt.png" alt="logo selekt">
+                    </picture>
                     <p class="ws10-c-paragraph ws10-u--mb0">Selekt</p>
                 </li>
             </ul>
