WebP images in television partial

--- a/one/maxi/resources/templates/partials/television.hbs
+++ b/one/maxi/resources/templates/partials/television.hbs
@@ -124,16 +124,28 @@
     <div class="ws10-c-logo-list ws10-c-logo-list--mini">
         <ul class="ws10-c-logo-list__list">
             <li class="ws10-c-logo-list__item">
-                <img src="img/section-tv/hbo-logo.png" class="ws10-c-logo-list__logo" alt="">
+                <picture>
+                    <source class="ws10-c-logo-list__logo" srcset="img/section-tv/hbo-logo.webp" type="image/webp">
+                    <source class="ws10-c-logo-list__logo" srcset="img/section-tv/hbo-logo.png" type="image/png">
+                    <img src="img/section-tv/hbo-logo.png" alt="logo HBO">
+                </picture>
             </li>
             {{!-- <li class="ws10-c-logo-list__item">
                 <img src="img/section-tv/amazon.png" class="ws10-c-logo-list__logo" alt="">
             </li> --}}
             <li class="ws10-c-logo-list__item">
-                <img src="img/section-tv/foxnow.png" class="ws10-c-logo-list__logo" alt="">
+                <picture>
+                    <source class="ws10-c-logo-list__logo" srcset="img/section-tv/foxnow.webp" type="image/webp">
+                    <source class="ws10-c-logo-list__logo" srcset="img/section-tv/foxnow.png" type="image/png">
+                    <img src="img/section-tv/foxnow.png" alt="logo Fox Now">
+                </picture>
             </li>
             <li class="ws10-c-logo-list__item">
-                <img src="img/section-tv/axnnow.png" class="ws10-c-logo-list__logo" alt="">
+                <picture>
+                    <source class="ws10-c-logo-list__logo" srcset="img/section-tv/axnnow.webp" type="image/webp">
+                    <source class="ws10-c-logo-list__logo" srcset="img/section-tv/axnnow.png" type="image/png">
+                    <img src="img/section-tv/axnnow.png" alt="logo AXN Now">
+                </picture>
             </li>
         </ul>
         <p class="ws10-c-logo-list__w-show-all">
