Fix also included title

--- a/one/maxi/resources/templates/partials/alsoincluded.hbs
+++ b/one/maxi/resources/templates/partials/alsoincluded.hbs
@@ -1,6 +1,6 @@
 <section class="vf-mobile ws10-u--pt12x">
   <h3 class="ws10-u-heading--3">
-      <strong>También incluido en Vodafone One Ilimitada Avanzada 300Mbps</strong>
+      <strong>También incluido en Vodafone One Ilimitada Plus 600Mbps</strong>
   </h3>
   <!-- CAROUSEL -->
   <div
