Colectivos Avanzada 300, sin sorpresas, fibra

--- a/colectivos/ilimitada_avanzada_300-600/resources/templates/partials/no-surprises.hbs
+++ b/colectivos/ilimitada_avanzada_300-600/resources/templates/partials/no-surprises.hbs
@@ -43,10 +43,7 @@
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
         data-js-vf="_portability"
       >
-        <span
-          class="ws10-c-price__amount"
-          data-js-vf="_recommendedRate"
-        >28,49</span>
+        <span class="ws10-c-price__amount">28,49</span>
         <span class="ws10-c-price__currency">€</span>
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
@@ -54,10 +51,7 @@
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop ws10-u--hidden"
         data-js-vf="_newNumber"
       >
-        <span
-          class="ws10-c-price__amount"
-          data-js-vf="_recommendedRate"
-        >28,49</span>
+        <span class="ws10-c-price__amount">28,49</span>
         <span class="ws10-c-price__currency">€</span>
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
@@ -74,10 +68,7 @@
       <div
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
       >
-        <span
-          class="ws10-c-price__amount"
-          data-js-vf="_recommendedRate"
-        >48,44</span>
+        <span class="ws10-c-price__amount">48,44</span>
         <span class="ws10-c-price__currency">€</span>
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
@@ -99,10 +90,7 @@
         data-js-vf="_portability"
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
       >
-        <span
-          class="ws10-c-price__amount"
-          data-js-vf="_recommendedRate"
-        >58,43</span>
+        <span class="ws10-c-price__amount">58,43</span>
         <span class="ws10-c-price__currency">€</span>
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
@@ -110,10 +98,7 @@
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop ws10-u--hidden"
         data-js-vf="_newNumber"
       >
-        <span
-          class="ws10-c-price__amount"
-          data-js-vf="_recommendedRate"
-        >48,44</span>
+        <span class="ws10-c-price__amount">48,44</span>
         <span class="ws10-c-price__currency">€</span>
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
@@ -129,10 +114,7 @@
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
         data-js-vf="_portability"
       >
-        <span
-          class="ws10-c-price__amount"
-          data-js-vf="_recommendedRate"
-        >66,98</span>
+        <span class="ws10-c-price__amount">66,98</span>
         <span class="ws10-c-price__currency">€</span>
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
@@ -140,10 +122,7 @@
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop ws10-u--hidden"
         data-js-vf="_newNumber"
       >
-        <span
-          class="ws10-c-price__amount"
-          data-js-vf="_recommendedRate"
-        >56,99</span>
+        <span class="ws10-c-price__amount">56,99</span>
         <span class="ws10-c-price__currency">€</span>
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
