--- a/colectivos/ilimitada_avanzada_300-600/resources/templates/partials/banner.hbs
+++ b/colectivos/ilimitada_avanzada_300-600/resources/templates/partials/banner.hbs
@@ -5,31 +5,24 @@
         class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet"
       >
         <!-- OFERTA TRY -->
-        <span class="ws10-u-heading--4" data-js-vf="_recommendedRate">
+        <span class="ws10-u-heading--4">
             Fibra + Móvil
           <strong>con 50% dto. 3 meses +<br />
             después 15% dto. 2 años</strong></span>
-        <span
-          class="ws10-u-heading--4 ws10-u--hidden"
-          data-js-vf="_regularRate"
-        >Fibra + Móvil
-          <strong>a precio de 300Mbps con 50% dto. 3 meses +<br />
-            después 15% dto. 2 años</strong></span>
-
         <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">
-            Fibra y datos para ser ilimitable
+            {{ banner.heading2 }}
         </h2>
 
         <a
           class="ws10-c-link-chevron ws10-c-link-chevron--primary"
           target="_blank"
-          href="https://www.vodafone.es/c/particulares/es/colectivos-vodafone/plp/"
-          data-analytics-element="modulo inferior"
-          data-analytics-context="condiciones legales"
-          data-analytics-category="cta"
-          data-analytics-id="-5460257368589"
+          href="{{ banner.cta.url }}"
+          data-analytics-element="{{ banner.cta.element }}"
+          data-analytics-context="{{ banner.cta.content }}"
+          data-analytics-category="{{ banner.cta.category }}"
+          data-analytics-id="{{ banner.cta.id }}"
         >
-          Volver a ver las ofertas
+          {{ banner.cta.label }}
           <span class="ws10-u--hidden-visually"> color #E60000</span>
           <svg
             class="ws10-c-link-chevron__icon"
@@ -51,11 +44,6 @@
         <div class="vf-ticket__floating">
           <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt">
               {{ ticket.heading }}
-            <!-- <span data-js-vf="_recommendedRate">300Mbps</span>
-            <span
-              class="ws10-u--hidden"
-              data-js-vf="_regularRate"
-            >600Mbps</span> -->
           </h2>
           <section
             class="ws10-c-card ws10-c-card-rate"
@@ -63,19 +51,6 @@
           >
             <div class="ws10-c-card-rate__w-rates">
               <div class="ws10-c-card-rate__a-rate">
-                <!-- <div class="vfms-badge--container">
-                  <div data-js-vf="_recommendedRate">
-                    <b
-                      class="ws10-c-badge-text ws10-c-badge-text--turquoise vfms-badge1"
-                    >50% dto.</b>
-                  </div>
-                  <div data-js-vf="_regularRate" class="ws10-u--hidden">
-                    <b
-                      class="ws10-c-badge-text ws10-c-badge-text--turquoise vfms-badge1"
-                    >50% dto.</b>
-                    <b class="ws10-c-badge-text vfms-badge2">+ Fibra por menos</b>
-                  </div>
-                </div> -->
                 <ul
                   class="ws10-c-card-rate__product-info"
                   data-vfes-seo-empathy-promoperiod="50% dto. 3 meses Permanencia 1 año"
@@ -93,12 +68,12 @@
 
                     <div class="ws10-c-card-rate__product">
                       <p class="ws10-c-card-rate__product-title">
-                        {{ ticket.description.[0].title }}
+                        {{ ticket.description.0.title }}
                       </p>
                       <p
                         class="ws10-c-card-rate__product-txt ws10-c-card-rate__product-txt--primary"
                       >
-                        {{ ticket.description.[0].subtitle }}
+                        {{ ticket.description.0.subtitle }}
                         <svg
                           class="ws10-c-card-rate__product-txt-icon"
                           xmlns="http://www.w3.org/2000/svg"
@@ -122,10 +97,10 @@
                     </svg>
                     <div class="ws10-c-card-rate__product">
                       <p class="ws10-c-card-rate__product-title">
-                        {{ ticket.description.[1].title }}
+                        {{ ticket.description.1.title }}
                       </p>
                       <p class="ws10-c-card-rate__product-txt">
-                        {{ ticket.description.[1].subtitle }}
+                        {{ ticket.description.1.subtitle }}
                       </p>
                     </div>
                   </li>
@@ -140,74 +115,11 @@
                     </svg>
                     <div class="ws10-c-card-rate__product">
                         <p class="ws10-c-card-rate__product-title">
-                          {{ ticket.description.[2].title }}
+                          {{ ticket.description.2.title }}
                         </p>
                         <p class="ws10-c-card-rate__product-txt">
-                          {{ ticket.description.[2].subtitle }}
+                          {{ ticket.description.2.subtitle }}
                         </p>
-                      <!-- <form
-                        action=""
-                        method="get"
-                        class="ws10-u--1/1 vf-form ws10-c-card-rate__form ws10-c-form ws10-u--mt0"
-                        data-js-vf="_showOrHideSticky"
-                      >
-                        <fieldset class="ws10-u--pb0 ws10-u--mb1x">
-                          <div class="ws10-c-card-rate__w-form-select">
-                            <div
-                              data-cta="300:vel:div"
-                              class="vf-form__box ws10-c-form__box"
-                              data-analytics-category="cta"
-                              data-analytics-element="#"
-                              data-analytics-context="#"
-                              data-analytics-id="#"
-                            >
-                              <input
-                                type="radio"
-                                name="rate-1-card-rate-speed"
-                                data-js-vf="recommendedRateCheck"
-                                id="rate-1-card-rate-speed-option-1"
-                                class="ws10-c-form__radio"
-                                data-analytics-category="cta"
-                                data-analytics-element="cardrate"
-                                data-analytics-context="300mbps"
-                                checked
-                              />
-                              <label
-                                for="rate-1-card-rate-speed-option-1"
-                                class="ws10-c-card-rate__form-label ws10-c-form__label vf-active vf-bold"
-                                data-js-vf="_buttonSpeed"
-                                data-js-vf-value="recommendedRate"
-                              >
-                                300Mbps
-                              </label>
-                            </div>
-                            <div
-                              data-cta="600:vel:div"
-                              class="vf-form__box ws10-c-form__box"
-                            >
-                              <input
-                                type="radio"
-                                name="rate-1-card-rate-speed"
-                                data-js-vf="regularRateCheck"
-                                id="rate-1-card-rate-speed-option-2"
-                                class="ws10-c-form__radio"
-                                data-analytics-element="modulo tarifa:one ilimitada	"
-                                data-analytics-context="600mbps"
-                                data-analytics-id="-6727641743211"
-                              />
-                              <label
-                                for="rate-1-card-rate-speed-option-2"
-                                class="ws10-c-card-rate__form-label ws10-c-form__label"
-                                data-js-vf="_buttonSpeed"
-                                data-js-vf-value="regularRate"
-                              >
-                                600Mbps
-                              </label>
-                            </div>
-                          </div>
-                        </fieldset>
-                    </form> -->
-
                     </div>
                   </li>
 
@@ -271,7 +183,7 @@
                       </div>
                     </div>
                   </fieldset>
-                  <div data-js-vf="_recommendedRate">
+                  <div>
                     <p
                       class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price"
                       data-js-vf="_portability"
@@ -307,12 +219,12 @@
                         data-cta="300:port:card"
                         type="submit"
                         class="ws10-c-button ws10-c-button--auto"
-                        href="#"
-                        onmousedown="#"
-                        data-analytics-element="#"
-                        data-analytics-context="#"
-                        data-analytics-category="#"
-                        data-analytics-id=""
+                        href="{{ ticket.offers.portability.cta.url }}"
+                        onmousedown="{{ ticket.offers.portability.cta.ul }}"
+                        data-analytics-element="{{ ticket.offers.portability.cta.element }}"
+                        data-analytics-context="{{ ticket.offers.portability.cta.content }}"
+                        data-analytics-category="{{ ticket.offers.portability.cta.category }}"
+                        data-analytics-id="{{ ticket.offers.portability.cta.id }}"
                       >
                         {{ ticket.offers.portability.cta.label }}
                         <span
@@ -341,12 +253,12 @@
                         data-cta="300:port:card"
                         type="submit"
                         class="ws10-c-button ws10-c-button--auto"
-                        href="#"
-                        onmousedown="#"
-                        data-analytics-element="#"
-                        data-analytics-context="#"
-                        data-analytics-category="#"
-                        data-analytics-id=""
+                        href="{{ ticket.offers.newNumber.cta.url }}"
+                        onmousedown="{{ ticket.offers.newNumber.cta.ul }}"
+                        data-analytics-element="{{ ticket.offers.newNumber.cta.element }}"
+                        data-analytics-context="{{ ticket.offers.newNumber.cta.content }}"
+                        data-analytics-category="{{ ticket.offers.newNumber.cta.category }}"
+                        data-analytics-id="{{ ticket.offers.newNumber.cta.id }}"
                       >
                         {{ ticket.offers.newNumber.cta.label }}
                         <span
@@ -356,97 +268,6 @@
                       </a>
                     </div>
                   </div>
-                  <!--
-                  <div class="ws10-u--hidden" data-js-vf="_regularRate">
-                    <p
-                      class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price"
-                      data-js-vf="_portability"
-                    >
-                      <strong>
-                        A precio de 300Mbps + 50% dto. 3 meses + después 15%
-                        dto. durante 2 años</strong>
-                    </p>
-                    <p
-                      class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price ws10-u--hidden"
-                      data-js-vf="_newNumber"
-                    >
-                      <strong>
-                        A precio de 300Mbps + 50% dto. 3 meses + después 15%
-                        dto. durante 2 años</strong>
-                    </p>
-                    <div
-                      class="ws10-c-card-rate__w-cta ws10-u--mt1x"
-                      data-js-vf="_portability"
-                    >
-                      <div class="ws10-c-card-rate__w-offers">
-                        <div
-                          class="ws10-c-card-rate__offer"
-                          id="rate-1-offer-1"
-                        >
-                          <p class="ws10-c-card-rate__form-title">
-                            Permanencia 1 año</p>
-                          <p
-                            class="ws10-c-card-rate__price ws10-u-color--black"
-                          >
-                            28,49€<sub>/mes</sub>
-                          </p>
-                        </div>
-                      </div>
-                      <a
-                        data-cta="600:port:card"
-                        type="submit"
-                        class="ws10-c-button ws10-c-button--auto"
-                        href="#"
-                        onmousedown="#"
-                        data-analytics-element="#"
-                        data-analytics-context="#"
-                        data-analytics-category="#"
-                        data-analytics-id=""
-                      >
-                        Lo quiero
-                        <span
-                          class="ws10-u--hidden-visually"
-                          data-cta-a11y
-                        ></span>
-                      </a>
-                    </div>
-                    <div
-                      class="ws10-c-card-rate__w-cta ws10-u--mt1x ws10-u--hidden"
-                      data-js-vf="_newNumber"
-                    >
-                      <div class="ws10-c-card-rate__w-offers">
-                        <div
-                          class="ws10-c-card-rate__offer"
-                          id="rate-1-offer-1"
-                        >
-
-                          <p
-                            class="ws10-c-card-rate__price ws10-u-color--black"
-                          >
-                            28,49€<sub>/mes</sub>
-                          </p>
-                        </div>
-                      </div>
-                      <a
-                        data-cta="600:new:card"
-                        type="submit"
-                        class="ws10-c-button ws10-c-button--auto"
-                        href="#"
-                        onmousedown="#"
-                        data-analytics-element="#"
-                        data-analytics-context="#"
-                        data-analytics-category="#"
-                        data-analytics-id=""
-                      >
-                        Lo quiero
-                        <span
-                          class="ws10-u--hidden-visually"
-                          data-cta-a11y
-                        ></span>
-                      </a>
-                    </div>
-                </div> -->
-
                 </form>
               </div>
             </div>
