Colectivos Avanzada 600 little fixes

--- a/colectivos/ilimitada_avanzada_600/resources/templates/partials/fibra.hbs
+++ b/colectivos/ilimitada_avanzada_600/resources/templates/partials/fibra.hbs
@@ -37,6 +37,8 @@
         <p class="ws10-c-product-detail__text">
             <strong>{{ fibra.details.0.[0] }}</strong>
             {{ fibra.details.0.[1] }}
+            <strong>{{ fibra.details.0.[2] }}</strong>
+            {{ fibra.details.0.[3] }}
         </p>
       </div>
       <div
